--- a/resolve-kwai-cdn-url/pyproject.toml
+++ b/resolve-kwai-cdn-url/pyproject.toml
@@ -5,5 +5,5 @@ description = "Resolve Kuaishou share links to CDN URLs using videodl (videofetc
 requires-python = ">=3.9"
 dependencies = [
   "videofetch",
-  "requests",
+  "tls-client",
 ]
