refactor: merge group-webhook-dispatch into piracy-handler and clean up
- Consolidate webhook dispatch/reconcile scripts into piracy-handler
- Remove standalone group-webhook-dispatch skill directory
- Deduplicate shared utils (readInput, env, etc.) into lib.ts
- Remove dead imports (spawnSync, requestJSON, path, etc.)
- Remove dead code (parseRequiredPositiveInt, duplicate readInput, unused --log-level)
- Optimize SKILL.md: improve description for trigger accuracy, reduce 93→57 lines
- Optimize references/commands.md: fix section ordering, simplify field override docs
- Update wechat-search-collector refs to point to piracy-handler
- Remove group-webhook-dispatch from Makefile SKILLS list

--- a/piracy-handler/package.json
+++ b/piracy-handler/package.json
@@ -2,11 +2,15 @@
   "name": "piracy-handler-skill",
   "private": true,
   "version": "0.1.0",
-  "description": "SQLite-driven piracy clustering, child task creation, and webhook plan creation.",
+  "description": "SQLite-driven piracy clustering, child task creation, webhook plan management, and whitelist checking.",
   "scripts": {
     "detect": "tsx scripts/piracy_detect.ts",
     "create-subtasks": "tsx scripts/piracy_create_subtasks.ts",
-    "upsert-webhook-plans": "tsx scripts/piracy_upsert_webhook_plans.ts"
+    "upsert-webhook-plans": "tsx scripts/piracy_upsert_webhook_plans.ts",
+    "dispatch": "tsx scripts/dispatch_webhook.ts",
+    "reconcile": "tsx scripts/reconcile_webhook.ts",
+    "upsert-plan": "tsx scripts/upsert_webhook_plan.ts",
+    "whitelist-check": "tsx scripts/whitelist_check.ts"
   },
   "devDependencies": {
     "@types/node": "^22.13.10",
