--- a/piracy-handler/package.json
+++ b/piracy-handler/package.json
@@ -10,7 +10,8 @@
     "dispatch": "tsx scripts/dispatch_webhook.ts",
     "reconcile": "tsx scripts/reconcile_webhook.ts",
     "upsert-plan": "tsx scripts/upsert_webhook_plan.ts",
-    "whitelist-check": "tsx scripts/whitelist_check.ts"
+    "whitelist-check": "tsx scripts/whitelist_check.ts",
+    "pipeline-supabase": "tsx scripts/piracy_pipeline_supabase.ts"
   },
   "devDependencies": {
     "@types/node": "^22.13.10",
